--- a/requirements.txt
+++ b/requirements.txt
@@ -5,3 +5,4 @@ motor            # async MongoDB driver
 python-jose[cryptography]  # JWT auth
 passlib[bcrypt]  # password hashing
 python-multipart  # for form data parsing (if you have file uploads or forms)
+python-dotenv          # load environment variables from .env
