--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,6 @@
 fastapi
 uvicorn[standard]
-pydantic
+pydantic>=2.0
 motor            # async MongoDB driver
 python-jose[cryptography]  # JWT auth
 passlib[bcrypt]  # password hashing
