pls last commit

--- a/requirements.txt
+++ b/requirements.txt
@@ -6,3 +6,4 @@ python-jose[cryptography]  # JWT auth
 passlib[bcrypt]  # password hashing
 python-multipart  # for form data parsing (if you have file uploads or forms)
 python-dotenv          # load environment variables from .env
+pydantic-settings>=2.0  # for managing settings
